--- a/nginx.conf
+++ b/nginx.conf
@@ -33,7 +33,7 @@ http {
             # Отключаем логирование для этого пути
             access_log off;
             # Возвращаем HTTP 200 для успешной проверки здоровья
-            return 200 "Healthy\n";
+            return 200 "The health check is passed, everything is successful.\n Response code: 200";
             add_header Content-Type text/plain;
         }
     }
